--- a/stablediffusion-v1/cloud-build.yaml
+++ b/stablediffusion-v1/cloud-build.yaml
@@ -6,14 +6,14 @@
    secretEnv: ['USERNAME', 'PASSWORD']
  - name: 'gcr.io/cloud-builders/docker'
    entrypoint: 'bash'
-   args: ['-c', 'docker build -t $$USERNAME/runpod-sd-no-autostart-v2.1:latest .']
+   args: ['-c', 'docker build -t $$USERNAME/runpod-sd-no-autostart:v1-5 .']
    secretEnv: ['USERNAME']
-   dir: 'stablediffusion-v2'
+   dir: 'stablediffusion-v1'
  - name: 'gcr.io/cloud-builders/docker'
    entrypoint: 'bash'
-   args: ['-c', 'docker push $$USERNAME/runpod-sd-no-autostart-v2.1:latest']
+   args: ['-c', 'docker push $$USERNAME/runpod-sd-no-autostart:v1-5']
    secretEnv: ['USERNAME']
-   dir: 'stablediffusion-v2'
+   dir: 'stablediffusion-v1'
  availableSecrets:
    secretManager:
    - versionName: projects/612771825738/secrets/docker-password/versions/1
