--- a/stablediffusion-v2/gcloud-build.yaml
+++ b/stablediffusion-v2/gcloud-build.yaml
@@ -8,12 +8,12 @@
    secretEnv: ['USERNAME', 'PASSWORD']
  - name: 'gcr.io/cloud-builders/docker'
    entrypoint: 'bash'
-   args: ['-c', 'docker build -t $$USERNAME/runpod-sd-no-autostart-v2.1:latest .']
+   args: ['-c', 'docker build -t $$USERNAME/runpod-sd-no-autostart:v2-1 .']
    secretEnv: ['USERNAME']
    dir: 'stablediffusion-v2'
  - name: 'gcr.io/cloud-builders/docker'
    entrypoint: 'bash'
-   args: ['-c', 'docker push $$USERNAME/runpod-sd-no-autostart-v2.1:latest']
+   args: ['-c', 'docker push $$USERNAME/runpod-sd-no-autostart:v2-1']
    secretEnv: ['USERNAME']
    dir: 'stablediffusion-v2'
  availableSecrets:
